--- a/Medical/res/layout/activity_login.xml
+++ b/Medical/res/layout/activity_login.xml
@@ -5,7 +5,7 @@
     android:orientation="vertical"
     android:background="@color/activity_gb2"  >
     
-    <include layout="@layout/module_top" />
+    <include layout="@layout/module_header" />
     
     <EditText 
 	    android:id="@+id/et_login_account"
