--- a/Medical/res/layout/activity_department_doctors.xml
+++ b/Medical/res/layout/activity_department_doctors.xml
@@ -2,10 +2,14 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical" >
+    android:orientation="vertical" 
+    android:background="@color/activity_gb">
+    
+    <include layout="@layout/module_header" />
+    
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="医院导航"/>
-
+        android:text="科室医生"/>
+    
 </LinearLayout>
