--- a/Medical/res/layout/module_header.xml
+++ b/Medical/res/layout/module_header.xml
@@ -8,7 +8,7 @@
     android:background="#08b2c9">
     
     <Button 
-        android:id="@+id/module_top_left"
+        android:id="@+id/module_header_left"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
@@ -16,7 +16,7 @@
         android:background="@drawable/module_top_left_1_selector"/>
     
     <TextView
-        android:id="@+id/module_top_title"
+        android:id="@+id/module_header_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textColor="@android:color/white"
@@ -25,7 +25,7 @@
         android:text="@string/app_name"/>
     
     <Button 
-        android:id="@+id/module_top_right"
+        android:id="@+id/module_header_right"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
