--- a/Medical/res/drawable/selector_btn_1.xml
+++ b/Medical/res/drawable/selector_btn_1.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item android:drawable="@color/btn_1_pressed" android:state_pressed="true"></item>
-    <item android:drawable="@color/btn_1_normal"></item>
+    <item android:drawable="@color/btn_1_p" android:state_pressed="true"></item>
+    <item android:drawable="@color/btn_1_n"></item>
 
 </selector>
