--- a/Medical/res/layout/activity_login.xml
+++ b/Medical/res/layout/activity_login.xml
@@ -33,7 +33,7 @@
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:checked="true"
-         android:textSize="@dimen/fontsize_h1"
+         android:textSize="18.0dip"
          android:drawablePadding="4.0dip"
          android:textColor="#d0d0d0"
          android:text="@string/autologinttxt" />
