--- a/Medical/res/values/colors.xml
+++ b/Medical/res/values/colors.xml
@@ -22,9 +22,9 @@
    	<color name="main_function_7">#388df7</color>
    	<color name="main_function_8">#c7a909</color>
    	
-   	<color name="btn_1_normal">#ff9702</color>
-   	<color name="btn_1_pressed">#fcd499</color>
-   	<color name="btn_2_normal">#0abad2</color>
-   	<color name="btn_2_pressed">#fcd499</color>
+   	<color name="btn_1_n">#ff9702</color>
+   	<color name="btn_1_p">#fcd499</color>
+   	<color name="btn_2_n">#0abad2</color>
+   	<color name="btn_2_p">#fcd499</color>
 	
 </resources>
