--- a/Medical/res/drawable/selector_module_top_left_2.xml
+++ b/Medical/res/drawable/selector_module_top_left_2.xml
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-
-    <item android:drawable="@drawable/module_top_left_2_pressed" android:state_pressed="true"></item>
-    <item android:drawable="@drawable/module_top_left_2_normal"></item>
-
+    <item android:drawable="@drawable/module_top_left_2_p" android:state_pressed="true"/>
+    <item android:drawable="@drawable/module_top_left_2_n"/>
 </selector>
