--- a/Medical/res/layout/module_header.xml
+++ b/Medical/res/layout/module_header.xml
@@ -1,10 +1,7 @@
+<?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="45dp"
-    android:paddingLeft="0dip"
-    android:paddingRight="0dip"
-    android:paddingTop="18.0dip"
-    android:paddingBottom="18.0dip"
+    android:layout_height="wrap_content"
     android:background="#08b2c9">
     
     <Button 
@@ -13,7 +10,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:onClick="onClick"
-        android:background="@drawable/selector_module_top_left_1"/>
+        android:background="@drawable/selector_module_header_button_1"/>
     
     <TextView
         android:id="@+id/module_header_title"
@@ -30,7 +27,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:onClick="onClick"
-        android:background="@drawable/selector_module_top_right_1"
+        android:background="@drawable/selector_module_header_button_2"
         android:visibility="gone"/>
     
 </RelativeLayout>
