--- a/Medical/res/values/colors.xml
+++ b/Medical/res/values/colors.xml
@@ -3,7 +3,6 @@
 
     <color name="white">#ffffff</color>
    	<color name="activity_gb">#f3f3f3</color>
-   	<color name="activity_gb1">#f3f3f3</color>
    	<color name="activity_gb2">#eafeff</color>
    	<color name="line">#efefef</color>
    	
@@ -22,9 +21,9 @@
    	<color name="main_function_7">#388df7</color>
    	<color name="main_function_8">#c7a909</color>
    	
-   	<color name="btn_1_n">#ff9702</color>
-   	<color name="btn_1_p">#fcd499</color>
-   	<color name="btn_2_n">#0abad2</color>
-   	<color name="btn_2_p">#fcd499</color>
+   	<color name="button_1_n">#ff9702</color>
+   	<color name="button_1_p">#fcd499</color>
+   	<color name="button_2_n">#0abad2</color>
+   	<color name="button_2_p">#fcd499</color>
 	
 </resources>
