--- a/Medical/res/values/styles.xml
+++ b/Medical/res/values/styles.xml
@@ -1,28 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <!--
-        Base application theme, dependent on API level. This theme is replaced
-        by AppBaseTheme from res/values-vXX/styles.xml on newer devices.
-    -->
     <style name="AppBaseTheme" parent="android:Theme.Light">
-        <!--
-            Theme customizations available in newer API levels can go in
-            res/values-vXX/styles.xml, while customizations related to
-            backward-compatibility can go here.
-        -->
     </style>
 
-    <!-- Application theme. -->
     <style name="AppTheme" parent="AppBaseTheme">
-        <!-- All customizations that are NOT specific to a particular API-level can go here. -->
     </style>
     
-    <style name="edittext_style" parent="@android:style/Widget.EditText">
-        <item name="android:layout_margin">5.0dip</item>
-        <item name="android:background">@drawable/selector_edittext</item>
-    </style>
-
     <style name="textview1">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
@@ -32,17 +16,31 @@
         <item name="android:layout_centerVertical">true</item>
     </style>
     
+    <style name="button1">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textSize">16.0dip</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:background">@null</item>
+        <item name="android:layout_centerVertical">true</item>
+    </style>
+    
+    <style name="edittext1" parent="@android:style/Widget.EditText">
+        <item name="android:layout_margin">5.0dip</item>
+        <item name="android:background">@drawable/selector_edittext</item>
+    </style>
+    
     <style name="listview1">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">match_parent</item>
         <item name="android:choiceMode">singleChoice</item>
-        <item name="android:divider">@drawable/bm_dottedline_bg</item>
         <item name="android:dividerHeight">1.0dip</item>
         <item name="android:fadeScrollbars">true</item>
         <item name="android:fadingEdge">none</item>
         <item name="android:fastScrollEnabled">true</item>
         <item name="android:scrollingCache">false</item>
-        <item name="android:cacheColorHint">#00000000</item>
+        <item name="android:divider">@drawable/bm_dottedline_bg</item>
+        <item name="android:cacheColorHint">@android:color/transparent</item>
         <item name="android:listSelector">@android:color/transparent</item>
     </style>
     
