--- a/Medical/res/layout/module_header.xml
+++ b/Medical/res/layout/module_header.xml
@@ -5,7 +5,7 @@
     android:background="#08b2c9">
     
     <Button 
-        android:id="@+id/module_header_left"
+        android:id="@+id/module_header_left_back"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
@@ -22,12 +22,11 @@
         android:text="@string/app_name"/>
     
     <Button 
-        android:id="@+id/module_header_right"
+        android:id="@+id/module_header_right_more"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
+        android:layout_alignParentRight="true"
         android:onClick="onClick"
-        android:background="@drawable/selector_module_header_button_2"
-        android:visibility="gone"/>
+        android:background="@drawable/selector_module_header_button_2"/>
     
 </RelativeLayout>
