--- a/Medical/res/values/colors.xml
+++ b/Medical/res/values/colors.xml
@@ -3,7 +3,6 @@
 
     <color name="white">#ffffff</color>
    	<color name="activity_gb">#f3f3f3</color>
-   	<color name="activity_gb2">#eafeff</color>
    	<color name="line">#efefef</color>
    	
    	<color name="sliding_layout_bg">#d9d9d9</color>
@@ -26,4 +25,6 @@
    	<color name="button_2_n">#0abad2</color>
    	<color name="button_2_p">#fcd499</color>
 	
+   	<color name="gb_frame">#e7eaee</color>
+   	
 </resources>
