--- a/Medical/res/values/styles.xml
+++ b/Medical/res/values/styles.xml
@@ -17,17 +17,27 @@
     </style>
     
     <style name="button1">
-        <item name="android:layout_width">wrap_content</item>
-        <item name="android:layout_height">wrap_content</item>
-        <item name="android:textSize">16.0dip</item>
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">45.0dip</item>
+        <item name="android:layout_margin">5.0dip</item>
+        <item name="android:textSize">20.0dip</item>
         <item name="android:textColor">@color/white</item>
-        <item name="android:background">@null</item>
-        <item name="android:layout_centerVertical">true</item>
+        <item name="android:onClick">onClick</item>
+        <item name="android:background">@drawable/selector_button_2</item>
     </style>
     
-    <style name="edittext1" parent="@android:style/Widget.EditText">
-        <item name="android:layout_margin">5.0dip</item>
-        <item name="android:background">@drawable/selector_edittext</item>
+    <style name="edittext1">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">45.0dip</item>
+        <item name="android:textSize">16.0dip</item>
+        <item name="android:textColor">#000000</item>
+        <item name="android:textColorHint">#dbd8d8</item>
+        <item name="android:maxLength">20</item>
+        <item name="android:ems">10</item>
+        <item name="android:background">@null</item>
+        <item name="android:drawableRight">@drawable/ic_input_clear</item>
+        <item name="android:layout_marginLeft">10.0dip</item>
+        <item name="android:layout_marginRight">10.0dip</item>
     </style>
     
     <style name="listview1">
