--- a/Medical/res/layout/listitem_department.xml
+++ b/Medical/res/layout/listitem_department.xml
@@ -3,7 +3,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:descendantFocusability="blocksDescendants"
-    android:orientation="horizontal" >
+    android:orientation="horizontal"
+    android:background="@drawable/selector_listitem1" >
 
     <TextView
         android:id="@+id/listitem_sharerecord_manager_title"
