--- a/Medical/res/layout/listitem_healthwikipedia.xml
+++ b/Medical/res/layout/listitem_healthwikipedia.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="45.0dip"
     android:descendantFocusability="blocksDescendants"
-    android:orientation="horizontal" >
+    android:orientation="horizontal"
+    android:background="@drawable/selector_listitem1"  >
 
     <TextView
         android:id="@+id/listitem_sharerecord_manager_title"
