--- a/Medical/res/layout/module_header.xml
+++ b/Medical/res/layout/module_header.xml
@@ -16,10 +16,9 @@
         android:id="@+id/module_header_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textColor="@android:color/white"
-        android:textSize="23.0dip"
         android:layout_centerInParent="true" 
-        android:text="@string/app_name"/>
+        android:textSize="25.0dip"
+        android:textColor="@android:color/white"/>
     
     <Button 
         android:id="@+id/module_header_right_more"
