--- a/Medical/res/layout/activity_department.xml
+++ b/Medical/res/layout/activity_department.xml
@@ -7,4 +7,8 @@
     
     <include layout="@layout/module_header" />
     
+    <com.start.widget.xlistview.XListView
+        android:id="@+id/xlv_listview"
+        style="@style/listview1"/>
+    
 </LinearLayout>
