--- a/Medical/res/layout/activity_doctor.xml
+++ b/Medical/res/layout/activity_doctor.xml
@@ -6,5 +6,9 @@
     android:background="@color/activity_gb">
     
     <include layout="@layout/module_header" />
+        
+    <com.start.widget.xlistview.XListView
+        android:id="@+id/xlv_listview"
+        style="@style/listview1"/>
     
 </LinearLayout>
