--- a/Medical/res/layout/listitem_department.xml
+++ b/Medical/res/layout/listitem_department.xml
@@ -1,19 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:descendantFocusability="blocksDescendants"
-    android:orientation="horizontal"
-    android:background="@drawable/selector_listitem1" >
-
-    <TextView
-        android:id="@+id/listitem_sharerecord_manager_title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_margin="5.0dip"
-        android:textColor="#9a9a9a"
-        android:textSize="15.0dip"
-        android:text="fkdjsklfajdklsjf"/>
-
-</LinearLayout>
+<TextView xmlns:android="http://schemas.android.com/apk/res/android"
+     android:id="@+id/listitem_main_title"
+     android:layout_width="match_parent"
+     android:layout_height="45.0dip"
+     android:drawableRight="@drawable/ic_arrow"
+     android:padding="10.0dip"
+     android:textSize="20.0dip"
+     android:textColor="#333333"
+ 	 android:background="@drawable/selector_listitem1"/>
