--- a/Medical/res/layout/listitem_doctor.xml
+++ b/Medical/res/layout/listitem_doctor.xml
@@ -2,17 +2,49 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:descendantFocusability="blocksDescendants"
-    android:orientation="horizontal" >
+    android:gravity="center_vertical"
+    android:orientation="horizontal"
+    android:background="@drawable/selector_listitem1">
 
-    <TextView
-        android:id="@+id/listitem_sharerecord_manager_title"
+    <ImageView 
+	    android:id="@+id/listitem_iv_header"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
         android:layout_margin="5.0dip"
-        android:textColor="#9a9a9a"
-        android:textSize="15.0dip"
-        android:text="fkdjsklfajdklsjf"/>
+        android:contentDescription="@string/empty"/>
+    
+    <ImageView 
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="5.0dip"
+        android:background="@drawable/dividingline"
+        android:contentDescription="@string/empty"/>
+    
+    <LinearLayout
+	    android:layout_width="match_parent"
+	    android:layout_height="wrap_content"
+        android:layout_margin="5.0dip"
+	    android:orientation="vertical">
+	    
+        <TextView
+	        android:id="@+id/listitem_main_title"
+	        android:layout_width="wrap_content"
+	        android:layout_height="wrap_content"
+	        android:textStyle="bold"
+	        android:textSize="16.0dip"
+	        android:textColor="#444444"/>
+        
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="5.0dip"/>
+        
+        <TextView
+	        android:id="@+id/listitem_child_title"
+	        android:layout_width="wrap_content"
+	        android:layout_height="wrap_content"
+	        android:textSize="15.0dip"
+	        android:textColor="#c3c3c3"/>
+        
+    </LinearLayout>
 
 </LinearLayout>
