--- a/Medical/res/layout/activity_healthwikipedia_detail.xml
+++ b/Medical/res/layout/activity_healthwikipedia_detail.xml
@@ -7,4 +7,45 @@
     
     <include layout="@layout/module_header" />
     
+    <LinearLayout
+	    android:layout_width="match_parent"
+	    android:layout_height="match_parent"
+	    android:padding="10.0dip"
+	    android:orientation="vertical">
+        
+        <TextView
+           android:id="@+id/detail_title"
+	       android:layout_width="wrap_content"
+	       android:layout_height="wrap_content"
+	       android:gravity="center"
+	       android:textStyle="bold"
+	       android:textSize="18.0dip"
+	       android:textColor="#444444"/>
+	      
+	     <View
+	       android:layout_width="match_parent"
+	       android:layout_height="5.0dip"/>
+	      
+	    <TextView
+           android:id="@+id/detail_source"
+	       android:layout_width="wrap_content"
+	       android:layout_height="wrap_content"
+	       android:textSize="15.0dip"
+	       android:textColor="#888888"/>
+	    
+	    <View
+	       android:layout_width="match_parent"
+	       android:layout_height="1.0dip"
+	       android:layout_margin="10.0dip"
+	       android:background="@drawable/bm_dottedline_bg"/>
+	    
+	    <TextView
+           android:id="@+id/detail_content"
+	       android:layout_width="match_parent"
+	       android:layout_height="match_parent"
+	       android:textSize="16.0dip"
+	       android:textColor="#c3c3c3"/>
+        
+    </LinearLayout>
+    
 </LinearLayout>
