--- a/MM/res/layout/activity_healthrecords.xml
+++ b/MM/res/layout/activity_healthrecords.xml
@@ -8,27 +8,27 @@
     <include layout="@layout/module_header" />
     
     <Button 
-	    android:id="@+id/btn_1"
+	    android:id="@+id/btn_medical_recor"
 	    style="@style/button1"
         android:text="病历"/>
     <Button 
-	    android:id="@+id/btn_2"
+	    android:id="@+id/btn_check"
 	    style="@style/button1"
         android:text="检查"/>
     <Button 
-	    android:id="@+id/btn_3"
+	    android:id="@+id/btn_medication"
 	    style="@style/button1"
         android:text="服药"/>
     <Button 
-	    android:id="@+id/btn_4"
+	    android:id="@+id/btn_discomfort_record"
 	    style="@style/button1"
         android:text="不适记录"/>
     <Button 
-	    android:id="@+id/btn_5"
+	    android:id="@+id/btn_medication_reminder"
 	    style="@style/button1"
         android:text="用药提醒"/>
     <Button 
-	    android:id="@+id/btn_6"
+	    android:id="@+id/btn_health_tracking"
 	    style="@style/button1"
         android:text="健康跟踪"/>
     
