--- a/MM/res/layout/activity_login.xml
+++ b/MM/res/layout/activity_login.xml
@@ -7,38 +7,22 @@
     
     <include layout="@layout/module_header" />
      
-     <LinearLayout
-         android:layout_width="match_parent"
-         android:layout_height="wrap_content"
-         android:background="@drawable/bg_frame"
-         android:orientation="horizontal"
-         android:layout_margin="5.0dip" >
+    <start.widget.CustomEditText
+        android:id="@+id/et_login_account"
+        style="@style/edittext1"
+        android:drawableLeft="@drawable/ic_account"
+ 	 	android:drawablePadding="5.0dip"
+  	 	android:layout_margin="5.0dip" 
+ 	 	android:hint="@string/accounthint" />
 
-         <start.widget.CustomEditText
-             android:id="@+id/et_login_account"
-             style="@style/edittext1"
-             android:drawableLeft="@drawable/ic_account"
-        	 android:drawablePadding="5.0dip"
-        	 android:padding="5.0dip"
-        	 android:hint="@string/accounthint" />
-     </LinearLayout>
-
-     <LinearLayout
-         android:layout_width="match_parent"
-         android:layout_height="wrap_content"
-         android:background="@drawable/bg_frame"
-         android:orientation="horizontal"
-         android:layout_margin="5.0dip"  >
-
-         <start.widget.CustomEditText
-             android:id="@+id/et_login_password"
-             style="@style/edittext1"
-	         android:inputType="textPassword"
-	         android:drawableLeft="@drawable/ic_password"
-	         android:drawablePadding="5.0dip"
-	         android:padding="5.0dip"
-	         android:hint="@string/passwordhint" />
-     </LinearLayout>
+     <start.widget.CustomEditText
+        android:id="@+id/et_login_password"
+        style="@style/edittext1"
+        android:inputType="textPassword"
+        android:drawableLeft="@drawable/ic_password"
+        android:drawablePadding="5.0dip"
+  	 	android:layout_margin="5.0dip" 
+        android:hint="@string/passwordhint" />
      
      <View
          android:layout_width="match_parent"
