--- a/MM/res/layout/module_sliding_layout_left_item.xml
+++ b/MM/res/layout/module_sliding_layout_left_item.xml
@@ -2,15 +2,15 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="45.0dip"
-    android:orientation="vertical" >
+    android:orientation="vertical"
+    android:clickable="true"
+    android:onClick="onClick">
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="44.0dip"
         android:background="@drawable/selector_main_sliding_left"
-        android:clickable="true"
-        android:gravity="center"
-        android:onClick="onClick" >
+        android:gravity="center">
 
         <ImageView
             android:id="@+id/ic_more"
